--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,20 @@
 <!doctype html>
 <html lang="en">
 <head>
+  
   <meta charset="UTF-8">
-  <title>Consultorio</title>
+  <title>MegaDental</title>
   <base href="/">
+  <script src='https://www.google.com/recaptcha/api.js'></script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
 </head>
 <body>
   <app-root></app-root>
   <script src="https://unpkg.com/ionicons@4.4.2/dist/ionicons.js"></script>
+
 </body>
 </html>
